--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,52 @@
+html {
+  scroll-padding: 50px;
+  padding: 0%;
+  margin: 0%;
+}
+
 body {
   font-family: "Times New Roman", serif;
+  padding: 0%;
+  margin: 0%;
+}
+
+.header {
+	background-color: #87CEEB;
+}
+
+.header .header-content {
+	padding-top: 8rem;
+	padding-bottom: 1rem;
+	text-align: center;
+}
+
+.header h1 {
+	margin-bottom: 1rem;
+	color: #fff;
+	font-size: 2.5rem;
+	line-height: 3rem;
 }
 
 
-
-#home {
-   background-image: url('../img/co.jpeg') no-repeat center bottom;
-   background-size: contain;
-}    
+.header .btn-solid-lg {
+	margin-right: 0.5rem;
+	margin-bottom: 1.125rem;
+	margin-left: 0.5rem;
+	border-color: #f3f7fd;
+	background-color: #f3f7fd;
+}
 
 h1,h2,h3,h4,h5,h6 {
-   font-weight: 700;
+   font-weight: 500;
 }
 
-.title {
-  text-transform: uppercase;
-
+.img-tela{
+  width: 300px;
+  height: auto;
 }
 
-.subtitle {
-    color: #cacaca;
+#info a.h4 .p{
+  color: #fff;
 }
 
 a {
@@ -34,11 +61,21 @@ a:hover {
   border-radius: 30px;
 }
 
+.nav-letra {
+  font-family: "Sofia", sans-serif;
+}
+
+#info {
+  background-color: #fff;
+}
+#servicos{
+background-color: #fff;
+}
 
 #servicos a.destaque{
    display: block;
-   background-color: #f0f0f0;
-   border-radius: 5px;
+   background-color: #fff;
+   border-radius: 2px;
    text-align: center;
    padding: 20px;
    color: #000;
@@ -51,16 +88,25 @@ a:hover {
   box-shadow: 0px 0px 10px 0px #000;
 }
 
+#section2{
+  background-color: #fff;
+}
+
 .section3{
   position: fixed;
 }
 
 .carousel-inner > img {
-  width: 10%;     
+  min-width: 50%;
 }
 
 .footer {
   position: absolute;
   width: 100%;
   height: 100px;  
+}
+
+#footer a.tocar:hover{
+  background: #f0f0f0;
+  box-shadow: 0px 0px 10px 0px #000;
 }
